# AlphaNet

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  sitecustomize.py  vercel.json
config/: settings.py
logs/: backtest_results.json  council_log.json  signal_log.json
scripts/: run_dev.sh  start.sh
src/agents/: council.py
src/api/routes/: _data_helper.py  agents.py  auction.py  backtest.py  cross_asset.py  curve.py  fixed_income.py  funding.py  merton.py  portfolio.py  regime.py  sentiment.py  signals.py  stress.py
src/backtest/: engine.py
src/curve/: carry.py  duration.py  term_premium.py  yield_curve.py
src/dashboard/templates/: auction.html  base.html  carry.html  correlation.html  cross_asset.html  demo.html  execution.html  fixed_income.html  funding.html  index.html  market.html  strategy.html  stress.html
src/execution/: paper_trader.py
src/nlp/: sentiment.py
src/regime/: detector.py
src/risk/: auction_analytics.py  correlation.py  funding_stress.py  merton.py  metrics.py  stress_test.py
src/strategies/: composite.py
src/strategies/credit/: curve_strategy.py
src/strategies/cross_asset/: divergence.py
src/strategies/equity/: momentum.py
tests/agents/: test_council.py
tests/api/: test_health.py
tests/backtest/: test_engine.py
tests/curve/: test_duration.py  test_yield_curve.py
tests/strategies/: test_credit.py  test_cross_asset.py  test_momentum.py
