[project]
name = "alphanet"
version = "0.1.0"
description = "Multi-Asset AI Investment Intelligence & Systematic Credit Platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
